Alineación SQL/ORM completada: 12 modelos sincronizados, embeddings corregidos, tablas faltantes agregadas

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
 DATABASE_URL=postgresql://postgres:TU_CONTRASENA@localhost/vescom
+# JWT y autenticación
+SECRET_KEY=cambia_esto_en_produccion_con_una_cadena_aleatoria_fuerte
+ACCESS_TOKEN_EXPIRE_MINUTES=60
+
+# Reconocimiento facial (ArcFace)
+SIMILITUD_UMBRAL=0.40
+
+# (Opcional) Modo debug para desarrollo
+DEBUG=False
